test/typeerrors/Heuristics/AppNotEnough2.hs
module AppNotEnough2 where

main = [ i | i <- [1..10], (==) i ]
